[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-archive-manager"
version = "0.1.0"
description = "A tool for importing, organizing and managing a photo archive."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Mads Fog Albrechtslund" }
]

[project.scripts]
pam = "photo_archive_manager.cli:main"